--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-python-telegram-bot==20.3
-httpx==0.24.1
+python-telegram-bot==20.7
+aiofiles==23.2.1
 python-dotenv==1.0.0
-Flask==3.0.2
-requests==2.31.0
-gunicorn==21.2.0
