--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,5 @@
-# Core dependencies
-flask==2.3.3
-pymongo==4.5.0
-pyrogram==2.0.106
-requests==2.31.0
-
-# Optional: For better performance and production deployment
-gunicorn==21.2.0
-motor==3.3.1
-
-# Development dependencies (optional)
+python-telegram-bot==20.7
+pymongo==4.6.1
+motor==3.3.2
+dnspython==2.4.2
 python-dotenv==1.0.0
